# python-entwicklungsumgebung

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  QUICKSTART.md  README.md  mypy.ini  noxfile.py  pyproject.toml  requirements-dev.txt  setup.py
src/: __init__.py  diashow-generator.py  example.py  file_organizer.py  md-to-html-converter.py  optimize_images.py  pdf_kapitel_splitter.py
tests/: test_example.py  test_file_organizer.py
tools/: erstelle_inhaltsverzeichnis.py
